# aegis

./: .fuse_hidden0000007f0000002d  .fuse_hidden000000bb00000044  .fuse_hidden000000c400000043  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
aegis/: .fuse_hidden0000004100000019  __init__.py  cli.py  pipeline.py
aegis/agent/: .fuse_hidden0000000d00000003  .fuse_hidden0000000f00000005  dual_llm.py  injection_scanner.py  tool_policy.py
aegis/guard/: __init__.py  guard_model.py  open_guard.py  push_guard.py  train_guard.py
aegis/normalize/: __init__.py  language.py  normalize.py
aegis/ops/: __init__.py  monitor.py  redteam.py
aegis/output/: .fuse_hidden0000003500000015  .fuse_hidden0000003600000016  .fuse_hidden0000003700000017  .fuse_hidden0000003800000018  __init__.py  leak.py  moderate.py  moderator.py  pii.py  response_guard.py  secrets.py
aegis/prefilter/: .fuse_hidden000000430000001a  attacks.py  (+8 more)
docs/: .fuse_hidden0000006d00000024  .fuse_hidden000000b000000046  .fuse_hidden000000b100000047  .fuse_hidden000000b200000048  Aegis_Design_and_Roadmap.md  Aegis_Model_Card.md  Aegis_Paper.md  STANDARDS.md
eval/: .fuse_hidden0000005800000025  .fuse_hidden0000005900000026  .fuse_hidden0000005d0000002a  .fuse_hidden0000005f0000002c  agent_eval.py  datasets.py  metrics.py  multilingual_eval.py  output_eval.py  redteam_eval.py  run_baselines.py
notebooks/: .fuse_hidden000000780000002e  .fuse_hidden0000007b00000031  .fuse_hidden0000007c00000032  _github_setup_cell.py  aegis_P1_eval_harness.ipynb  aegis_P2_fast_layer.ipynb  aegis_P3_guard.ipynb  aegis_P4_agent_defense.ipynb  aegis_P6_packaging.ipynb
presentations/: Aegis_Academic_Deck.pptx  Aegis_Study_Deck.pptx  Aegis_Technical_Deck.pptx
service/: .fuse_hidden0000007000000038  .fuse_hidden0000007100000039  .fuse_hidden000000730000003b  .fuse_hidden000000c900000045  README.md  __init__.py  app.py
tests/: .fuse_hidden000000cb0000003c  test_aegis.py
