[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-guard"
version = "0.6.0"
description = "Aegis - layered (L0-L5) LLM jailbreak & prompt-injection defense: de-obfuscation, fast detector, fine-tuned guard ensemble, agent defense, output moderation, continuous red-team."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "U E Sai Pavan Vamshi Krishna, IIT Jodhpur"}]
keywords = ["llm-security", "jailbreak", "prompt-injection", "guardrails", "ai-safety", "owasp-llm-top-10", "red-teaming"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]
dependencies = ["scikit-learn>=1.1", "pandas", "numpy", "scipy"]

[project.optional-dependencies]
data  = ["datasets>=2.18", "huggingface_hub"]
guard = ["transformers>=4.44", "torch", "sentence-transformers", "faiss-cpu", "peft", "bitsandbytes", "accelerate"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2"]
ops   = ["wandb", "langdetect"]
dev   = ["pytest>=7"]

[project.scripts]
aegis = "aegis.cli:main"

[project.urls]
Homepage = "https://github.com/g25ait2149/aegis"
Repository = "https://github.com/g25ait2149/aegis"

[tool.setuptools.packages.find]
include = ["aegis*", "eval*", "service*"]
